Added 'Configure search' header to sge and cci_search plots' search input sections

--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -39,6 +39,12 @@ nav ul li a, h5 {
     font-size: 16px;
   }
 
+  .search-header {
+    padding: 10px;
+    font-family: "Helvetica";
+    font-size: 18px;
+  }
+
   .inline-icon {
     vertical-align: bottom;
     font-size: 24px !important;
