--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -49,6 +49,10 @@ nav ul li a, h5 {
     font-size: 18px !important;
   }
 
+  .switch-label {
+    font-size: 16px !important;
+  }
+
   .inline-icon {
     vertical-align: bottom;
     font-size: 24px !important;
