1. Moved at a glance descriptive plot to a button-based pop-up; 2. Made section headers more prominent (by colouring them in blue); 3. Made filters in sge, cci_summary and cci_search plots collapsible (and collapsed on first view); 4. In cci_search plot header prepend title with 'Top 10' on first page load, but in subsequent plot refreshes (due to changed filters etc) don't say in the title how many interactions are displayed.

--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -76,6 +76,10 @@ nav ul li a, h5 {
     background-color: #F1F1F1 !important;
  }
 
+#cci_specificity_explanatory_graphic {
+    width:50% !important;
+}
+
 
 /* Specificity at a glance (Sankey) plot - start */
 .node rect {
