--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -75,3 +75,43 @@ nav ul li a, h5 {
  .switch label .lever:after {
     background-color: #F1F1F1 !important;
  }
+
+ #cci-display-box {
+  border-style: solid;
+  border-radius: 5px;
+  border-color: hsl(0, 0%, 71%);
+  border-width: thin;
+  box-shadow: none;
+  padding-top: 5px;
+  min-height: 90vh;
+  height:1px;
+  width: 95%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+#cci-display-panel {
+  overflow: hidden;
+  display: flex;
+  flex: 1;
+}
+
+#cci-tabs-row, #cci-display-panel {
+  margin-bottom: 0%;
+}
+
+#cci-tabs {
+  padding-inline-start: 0px;
+  border-bottom: solid;
+  border-color: hsl(0, 0%, 71%);
+  border-width: thin;
+}
+
+#cci-config {
+  height: 100%;
+  border-right: solid;
+  border-color: hsl(0, 0%, 71%);
+  border-width: thin;
+  overflow-y: scroll;
+}
