--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -77,11 +77,6 @@ nav ul li a, h5 {
  }
 
  #cci-display-box {
-  border-style: solid;
-  border-radius: 5px;
-  border-color: hsl(0, 0%, 71%);
-  border-width: thin;
-  box-shadow: none;
   padding-top: 5px;
   min-height: 90vh;
   height:1px;
@@ -89,12 +84,17 @@ nav ul li a, h5 {
   margin: auto;
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
 }
 
 #cci-display-panel {
-  overflow: hidden;
-  display: flex;
   flex: 1;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.cci-display {
+  overflow: scroll;
 }
 
 #cci-tabs-row, #cci-display-panel {
@@ -108,10 +108,37 @@ nav ul li a, h5 {
   border-width: thin;
 }
 
+/*Colouring the CCI display selection tabs to match overall aesthetic*/
+#cci-tabs .tab a{
+  color:#1565c0;
+}
+
+#cci-tabs .tab a:hover {
+  background-color:#eee;
+  color:#0d47a1;
+}
+
+#cci-tabs .tab a.active {
+  background-color:#bbdefb;
+  color:#0d47a1;
+}
+
+#cci-tabs .indicator {
+  background-color:#1565c0;
+}
+
 #cci-config {
   height: 100%;
   border-right: solid;
   border-color: hsl(0, 0%, 71%);
   border-width: thin;
   overflow-y: scroll;
+}
+
+.border-card {
+  border-style: solid;
+  border-radius: 5px;
+  border-color: hsl(0, 0%, 71%);
+  border-width: thin;
+  box-shadow: none;
 }
