--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -174,3 +174,8 @@ nav ul li a, h5 {
   margin-bottom: 0px;
   width: 100%;
 }
+
+.filter-row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
