--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -77,12 +77,12 @@ nav ul li a, h5 {
  }
 
  /*==================================================
-    CELLPHONEDB PREDICTIONS PANE
+    CELLPHONEDB INPUT AND PREDICTIONS PANES
  ==================================================*/
 
- /* Overall display for CellphoneDB predictions pane */
+ /* Overall display for CellphoneDB panes */
 
- #cci-display-box {
+ #cci-display-box, #input-display-box {
   padding-top: 5px;
   height: 90vh;
   width: 95%;
@@ -92,7 +92,7 @@ nav ul li a, h5 {
   overflow: hidden;
 }
 
-#cci-display-panel {
+#cci-display-panel, #input-display-panel {
   margin-left: 0;
   margin-right: 0;
   align-self: stretch;
@@ -101,8 +101,20 @@ nav ul li a, h5 {
   overflow-y: scroll;
 }
 
+.input-display {
+  margin: auto;
+}
+
 .cci-display {
   overflow-x: scroll;
+}
+
+#input-display-panel {
+  overflow-x: scroll;
+}
+
+#cci-summary, #cci-search, #single-gene-expr, .input-display {
+  padding-top: 20px;
 }
 
 .border-card {
@@ -115,32 +127,32 @@ nav ul li a, h5 {
 
 /* Tabs for CellphoneDB predictions pane */
 
-#cci-tabs-row, #cci-display-panel {
+#cci-tabs-row, #cci-display-panel, #input-tabs-row, #input-display-panel {
   margin-bottom: 0%;
 }
 
-#cci-tabs {
+#cci-tabs, #input-tabs {
   padding-inline-start: 0px;
   border-bottom: solid;
   border-color: hsl(0, 0%, 71%);
   border-width: thin;
 }
 
-#cci-tabs .tab a{
+#cci-tabs .tab a, #input-tabs .tab a{
   color:#1565c0;
 }
 
-#cci-tabs .tab a:hover {
+#cci-tabs .tab a:hover, #input-tabs .tab a:hover {
   background-color:#eee;
   color:#0d47a1;
 }
 
-#cci-tabs .tab a.active {
+#cci-tabs .tab a.active, #input-tabs .tab a.active {
   background-color:#bbdefb;
   color:#0d47a1;
 }
 
-#cci-tabs .indicator {
+#cci-tabs .indicator, #input-tabs .indicator {
   background-color:#1565c0;
 }
 
