--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -219,3 +219,15 @@ nav ul li a, h5 {
 .cci-summary-plot-row {
   width: 1700px;
 }
+
+/*Force scrollbar to always show on any browser*/
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
