Swap input and output panes, change titles so they float to the left

--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -80,6 +80,12 @@ nav ul li a, h5 {
     CELLPHONEDB INPUT AND PREDICTIONS PANES
  ==================================================*/
 
+ .pane-title {
+  width: 95%;
+  margin: auto;
+  margin-bottom: 20px;
+  margin-top: 40px;
+ }
  /* Overall display for CellphoneDB panes */
 
  #cci-display-box, #input-display-box {
