Handle no microenvironments, display message in config pane

--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -241,6 +241,10 @@ nav ul li a, h5 {
 
 /*For error alerts*/
 
+.no-microenvs-alert {
+  margin-right: 20px;
+}
+
 .alert {
 	.card-content {
 		span {
